--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "testRegex": "tests/.*\\.spec\\.js$"
   },
   "dependencies": {
+    "airbnb-prop-types": "^2.4.1",
     "babel-polyfill": "6.20.0",
     "core-decorators": "^0.15.0",
     "fontfaceobserver": "2.0.7",
@@ -212,6 +213,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-icons": "^2.2.3",
+    "react-portal": "^3.0.0",
     "react-router": "^3.0.2",
     "react-router-scroll": "0.4.1",
     "react-syntax-highlighter": "^5.0.0",
