--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
       "newline-per-chained-call": 0,
       "no-confusing-arrow": 0,
       "no-console": 1,
+      "no-mixed-operators": 0,
       "no-use-before-define": 0,
       "prefer-template": 2,
       "class-methods-use-this": 0,
@@ -136,6 +137,8 @@
       ],
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
+      "react/jsx-uses-react": 2,
+      "react/react-in-jsx-scope": 2,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
       "require-yield": 0,
