--- a/package.json
+++ b/package.json
@@ -196,7 +196,8 @@
     },
     "moduleDirectories": [
       "node_modules",
-      "demo"
+      "demo",
+      "src"
     ],
     "moduleNameMapper": {
       ".*\\.(css|less|styl|scss|sass)$": "<rootDir>/internals/mocks/cssModule.js",
