--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-icons": "^2.2.3",
+    "react-modal": "^1.7.7",
     "react-portal": "^3.0.0",
     "react-router": "^3.0.2",
     "react-router-scroll": "0.4.1",
