--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "airbnb-prop-types": "^2.4.1",
     "babel-polyfill": "6.20.0",
     "core-decorators": "^0.15.0",
+    "detect-node": "^2.0.3",
     "fontfaceobserver": "2.0.7",
     "jest-enzyme": "^2.1.2",
     "lodash": "4.17.2",
