--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-mdl",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Components for React built using Styled Components and based on Google's Material Design Lite",
   "private": false,
   "main": "lib/index.js",
@@ -214,6 +214,7 @@
     "airbnb-prop-types": "^2.4.1",
     "babel-polyfill": "6.20.0",
     "core-decorators": "^0.15.0",
+    "detect-node": "^2.0.3",
     "fontfaceobserver": "2.0.7",
     "jest-enzyme": "^2.1.2",
     "lodash": "4.17.2",
