fix checkbox check clipping

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-mdl",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "description": "Components for React built using Styled Components and based on Google's Material Design Lite",
   "private": false,
   "main": "lib/index.js",
@@ -41,21 +41,11 @@
   },
   "pre-commit": "lint:staged",
   "babel": {
-    "presets": [
-      [
-        "latest"
-      ],
-      "react",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-decorators-legacy"
-    ],
+    "presets": [["latest"], "react", "stage-0"],
+    "plugins": ["transform-decorators-legacy"],
     "env": {
       "production": {
-        "only": [
-          "app"
-        ],
+        "only": ["app"],
         "plugins": [
           "transform-react-remove-prop-types",
           "transform-react-constant-elements",
@@ -63,10 +53,7 @@
         ]
       },
       "test": {
-        "plugins": [
-          "transform-es2015-modules-commonjs",
-          "dynamic-import-node"
-        ]
+        "plugins": ["transform-es2015-modules-commonjs", "dynamic-import-node"]
       }
     }
   },
@@ -79,10 +66,7 @@
       "jest": true,
       "es6": true
     },
-    "plugins": [
-      "react",
-      "jsx-a11y"
-    ],
+    "plugins": ["react", "jsx-a11y"],
     "parserOptions": {
       "ecmaVersion": 6,
       "sourceType": "module",
@@ -91,18 +75,9 @@
       }
     },
     "rules": {
-      "arrow-parens": [
-        "error",
-        "always"
-      ],
-      "arrow-body-style": [
-        2,
-        "as-needed"
-      ],
-      "comma-dangle": [
-        2,
-        "always-multiline"
-      ],
+      "arrow-parens": ["error", "always"],
+      "arrow-body-style": [2, "as-needed"],
+      "comma-dangle": [2, "always-multiline"],
       "import/imports-first": 0,
       "import/newline-after-import": 0,
       "import/no-dynamic-require": 0,
@@ -133,10 +108,7 @@
       "prefer-template": 2,
       "class-methods-use-this": 0,
       "react/forbid-prop-types": 0,
-      "react/jsx-first-prop-new-line": [
-        2,
-        "multiline"
-      ],
+      "react/jsx-first-prop-new-line": [2, "multiline"],
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
       "react/no-unescaped-entities": 0,
@@ -152,9 +124,7 @@
       "mountComponent": true
     },
     "settings": {
-      "import/core-modules": [
-        "material-components"
-      ],
+      "import/core-modules": ["material-components"],
       "import/resolver": {
         "webpack": {
           "config": "./internals/webpack/webpack.prod.babel.js"
@@ -173,11 +143,7 @@
       "minimist",
       "sanitize.css"
     ],
-    "include": [
-      "core-js",
-      "lodash",
-      "eventsource-polyfill"
-    ]
+    "include": ["core-js", "lodash", "eventsource-polyfill"]
   },
   "jest": {
     "collectCoverageFrom": [
@@ -197,11 +163,7 @@
         "lines": 90
       }
     },
-    "moduleDirectories": [
-      "node_modules",
-      "demo",
-      "src"
-    ],
+    "moduleDirectories": ["node_modules", "demo", "src"],
     "moduleNameMapper": {
       ".*\\.(css|less|styl|scss|sass)$": "<rootDir>/internals/mocks/cssModule.js",
       ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/image.js",
