Actually use checkbox color variables
Fixes isogon/styled-mdl/14

--- a/package.json
+++ b/package.json
@@ -41,11 +41,21 @@
   },
   "pre-commit": "lint:staged",
   "babel": {
-    "presets": [["latest"], "react", "stage-0"],
-    "plugins": ["transform-decorators-legacy"],
+    "presets": [
+      [
+        "latest"
+      ],
+      "react",
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
     "env": {
       "production": {
-        "only": ["app"],
+        "only": [
+          "app"
+        ],
         "plugins": [
           "transform-react-remove-prop-types",
           "transform-react-constant-elements",
@@ -53,7 +63,10 @@
         ]
       },
       "test": {
-        "plugins": ["transform-es2015-modules-commonjs", "dynamic-import-node"]
+        "plugins": [
+          "transform-es2015-modules-commonjs",
+          "dynamic-import-node"
+        ]
       }
     }
   },
@@ -66,7 +79,10 @@
       "jest": true,
       "es6": true
     },
-    "plugins": ["react", "jsx-a11y"],
+    "plugins": [
+      "react",
+      "jsx-a11y"
+    ],
     "parserOptions": {
       "ecmaVersion": 6,
       "sourceType": "module",
@@ -75,15 +91,24 @@
       }
     },
     "rules": {
-      "arrow-parens": ["error", "always"],
-      "arrow-body-style": [2, "as-needed"],
-      "comma-dangle": [2, "always-multiline"],
+      "arrow-parens": [
+        "error",
+        "always"
+      ],
+      "arrow-body-style": [
+        2,
+        "as-needed"
+      ],
+      "comma-dangle": [
+        2,
+        "always-multiline"
+      ],
       "import/imports-first": 0,
       "import/newline-after-import": 0,
       "import/no-dynamic-require": 0,
       "import/no-extraneous-dependencies": 0,
       "import/no-named-as-default": 0,
-      "import/no-unresolved": 2,
+      "import/no-unresolved": 0,
       "import/prefer-default-export": 0,
       "indent": [
         2,
@@ -108,7 +133,10 @@
       "prefer-template": 2,
       "class-methods-use-this": 0,
       "react/forbid-prop-types": 0,
-      "react/jsx-first-prop-new-line": [2, "multiline"],
+      "react/jsx-first-prop-new-line": [
+        2,
+        "multiline"
+      ],
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
       "react/no-unescaped-entities": 0,
@@ -124,7 +152,9 @@
       "mountComponent": true
     },
     "settings": {
-      "import/core-modules": ["material-components"],
+      "import/core-modules": [
+        "material-components"
+      ],
       "import/resolver": {
         "webpack": {
           "config": "./internals/webpack/webpack.prod.babel.js"
@@ -143,7 +173,11 @@
       "minimist",
       "sanitize.css"
     ],
-    "include": ["core-js", "lodash", "eventsource-polyfill"]
+    "include": [
+      "core-js",
+      "lodash",
+      "eventsource-polyfill"
+    ]
   },
   "jest": {
     "collectCoverageFrom": [
@@ -163,7 +197,11 @@
         "lines": 90
       }
     },
-    "moduleDirectories": ["node_modules", "demo", "src"],
+    "moduleDirectories": [
+      "node_modules",
+      "demo",
+      "src"
+    ],
     "moduleNameMapper": {
       ".*\\.(css|less|styl|scss|sass)$": "<rootDir>/internals/mocks/cssModule.js",
       ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/internals/mocks/image.js",
