--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-mdl",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Components for React built using Styled Components and based on Google's Material Design Lite",
   "private": false,
   "main": "lib/index.js",
@@ -218,8 +218,8 @@
     "fontfaceobserver": "2.0.7",
     "jest-enzyme": "^2.1.2",
     "lodash": "4.17.2",
-    "react": "15.4.1",
-    "react-dom": "15.4.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-icons": "^2.2.3",
     "react-modal": "^1.7.7",
     "react-portal": "^3.0.0",
@@ -227,7 +227,7 @@
     "react-router-scroll": "0.4.1",
     "react-syntax-highlighter": "^5.0.0",
     "sanitize.css": "4.1.0",
-    "styled-components": "1.1.2",
+    "styled-components": "^1.1.2",
     "warning": "^3.0.0"
   },
   "devDependencies": {
