--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "styled-mdl",
   "version": "0.1.5",
-  "description":
-    "Components for React built using Styled Components and based on Google's Material Design Lite",
+  "description": "Components for React built using Styled Components and based on Google's Material Design Lite",
   "private": false,
   "main": "lib/index.js",
   "repository": {
@@ -17,8 +16,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "yarn build:clean && yarn lint",
-    "build":
-      "babel -s inline --ignore '**/tests' --source-root src/ -d lib src/",
+    "build": "babel -s inline --ignore '**/tests' --source-root src/ -d lib src/",
     "build:clean": "yarn test:clean && rimraf ./lib",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node demo/server",
@@ -28,8 +26,7 @@
     "clean": "shjs ./internals/scripts/clean.js",
     "clean:all": "yarn test:clean && yarn build:clean",
     "lint": "yarn lint:js",
-    "lint:eslint":
-      "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "yarn lint:eslint -- . ",
     "lint:staged": "lint-staged",
     "pretest": "yarn test:clean && yarn lint",
@@ -37,8 +34,7 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "manualPrepublish":
-      "yarn build && prepare-isogon-package . && yarn generate-lock-entry --production > yarn.lock"
+    "manualPrepublish": "yarn build && prepare-isogon-package . && yarn generate-lock-entry --production > yarn.lock"
   },
   "lint-staged": {
     "*.js": "lint:eslint"
@@ -55,7 +51,11 @@
       "minimist",
       "sanitize.css"
     ],
-    "include": ["core-js", "lodash", "eventsource-polyfill"]
+    "include": [
+      "core-js",
+      "lodash",
+      "eventsource-polyfill"
+    ]
   },
   "peerDependencies": {
     "react": "^15.4.1",
@@ -66,6 +66,7 @@
     "detect-node": "^2.0.3",
     "fontfaceobserver": "2.0.7",
     "lodash": "4.17.2",
+    "polished": "^1.9.0",
     "prop-types": "^15.6.0",
     "react-modal": "^3.1.0",
     "react-portal": "^3.0.0",
