--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "yarn test:clean && rimraf ./lib",
-    "build": "babel src -s -d lib --ignore '/demos/'",
+    "build": "babel src -s -d lib --ignore '/__demos__/,/__tests__/'",
     "dev:serveStories": "NODE_ENV=development yarn storybook",
     "dev:createStories": "./scripts/demos2stories.js",
     "dev":
