--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   },
   "pre-commit": "oncommit",
   "peerDependencies": {
-    "react": "^15.4.1 || ^16.0.0",
-    "react-dom": "^15.4.1 || ^16.0.0",
+    "react": "^15.4.1 || ^16.2.0",
+    "react-dom": "^15.4.1 || ^16.2.0",
     "styled-components": "^2.0.0 || ^3.0.0"
   },
   "dependencies": {
+    "@storybook/cli": "^3.4.2",
     "fontfaceobserver": "2.0.7",
     "invariant": "^2.2.4",
     "lodash": "4.17.2",
